--- a/style.scss
+++ b/style.scss
@@ -1568,7 +1568,7 @@ details[open] > .filter-name {
   justify-content: space-between;
 }
 
-.trending-now-nav:last-of-type {
+.trending-now-nav-mb {
   margin-bottom: 40px;
 }
 
