--- a/style.css
+++ b/style.css
@@ -1885,7 +1885,7 @@ details[open] > .filter-name {
           justify-content: space-between;
 }
 
-.trending-now-nav:last-of-type {
+.trending-now-nav-mb {
   margin-bottom: 40px;
 }
 
